# IM

./: .gitignore  .gitmodules  CMakeLists.txt  IM.sln  README.md
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  CmakeLists.txt
Client/src/: client_app.c  client_app.h  client_dispatch.c  client_dispatch.h  client_input.c  client_input.h  client_plugin.c  client_plugin.h  client_plugin_loader.c  client_plugin_loader.h  client_socket.c  client_socket.h  main.c
Client/src/cmd/: cmd_chat.c  cmd_common.h  cmd_friend.c  cmd_system.c  cmd_user.c
Client/src/dao/: client_db.c  client_db.h
Client/src/handlers/: chat_handler.c  friend_handler.c  handlers.h  system_handler.c  user_handler.c
Client/src/send/: send.c  send.h
Client/src/utils/: parse.c  parse.h
IM/: CMakeLists.txt  IM.vcxproj  IM.vcxproj.filters
IM/src/: im_err.c  im_err.h  im_msg_type.h  im_protocol.c  im_protocol.h
IM/src/db/: db.c  db.h
IM/src/platform/: im_socket.h  im_socket_linux.c  im_socket_win.c  im_thread.h  im_thread_linux.c  im_thread_win.c  im_time.c  im_time.h  im_tools.h
IM/src/utils/: im_list.c  im_list.h  list.c
Plugin/: CMakeLists.txt  auto_reply_plugin.c
Server/: CMakeLists.txt  CmakeLists.txt  Server.vcxproj  Server.vcxproj.filters  im_server.db
Server/src/: main.c  server_app.c  server_app.h  server_dispatch.c  server_dispatch.h  server_socket.c  server_socket.h
Server/src/dao/: chat_dao.c  chat_dao.h  db.c  db.h  friend_dao.c  friend_dao.h  server_db.c  server_db.h  user_dao.c  user_dao.h
Server/src/handlers/: chat_handler.c  friend_handler.c  handlers.h  user_handler.c
Server/src/managers/: chat_manager.c  chat_manager.h  friend_manager.c  friend_manager.h  user_manager.c  user_manager.h
Server/src/send/: send.c  send.h
